--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,3 @@
-
-/* Your CSS Code here. */
- table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
+ table,td,tr,th{
             border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        .black-background {
-            background-color: black;
-            color: white;
         }
